--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -1,6 +1,8 @@
-{% extends "auctions/layout.html" %} 
-
-{% block title %} {{ listing.title }} {%endblock title %} 
+{% extends "auctions/layout.html" %}
+ 
+{% block title %} 
+  {{ listing.title }}
+{%endblock title %} 
 
 {% block body %}
 <div class="container">
@@ -12,7 +14,10 @@
         alt="Card image cap"
         style="height: 500px; object-fit: cover"
       />
-      <div class="card-body row justify-content-between" style="align-items: center;">
+      <div
+        class="card-body row justify-content-between"
+        style="align-items: end"
+      >
         <div class="left col-12 col-lg-8">
           <h5 class="card-title">{{ listing.title }}</h5>
           <div class="card-text">
@@ -52,20 +57,25 @@
         <div class="right col-12 col-lg-4 text-center mt-4">
           <!-- Bidding form -->
           <form action="{% url 'add-bid' %}" method="POST">
-            {% csrf_token %} {{ bidding_form }}
+            {% csrf_token %}
+            <div class="input-group mb-3">
+              {{ bidding_form.amount }}
+              <div class="input-group-append">
+                <input type="submit" value="Bid" class="btn btn-secondary" />
+              </div>
+            </div>
             <input type="hidden" name="listing_id" value="{{ listing.id }}" />
-            <input type="submit" value="Bid" class="btn btn-secondary w-50" />
           </form>
           {% if is_owner %}
-            <h4 class="display-6 mt-3">Close Auction</h4>
-            <form action="{% url 'close-auction' %}" method="POST">
-              {% csrf_token %}
-              <input type="hidden" value="{{ listing.id }}" name="listing_id">
-              <input type="submit" value="Close" class="btn btn-danger w-50">
-            </form>
+          <h4 class="display-6 mt-3">Close Auction</h4>
+          <form action="{% url 'close-auction' %}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" value="{{ listing.id }}" name="listing_id" />
+            <input type="submit" value="Close" class="btn btn-danger w-50" />
+          </form>
           {% endif %}
         </div>
-      {% endif %}
+        {% endif %}
       </div>
     </div>
     <!-- If won -->
@@ -75,16 +85,25 @@
     </div>
     {% endif %}
   </div>
-  <div class="container text-center mt-5">
-    <h4 class="display-4 my-5 ">Comments💬</h4>
-    {% for comment in comments %}
-    <div class="alert mb-3 border" role="alert">
-      <header><p><b>{{ comment.user }}</b></p></header>
-      <p>{{ comment.text }}</p>
-      <hr>
-      <p class="muted small">{{ comment.created_at }}</p>
+  {% if user.is_authenticated and listing.active %}
+  <h4 class="display-4 my-5 text-center">Comments💬</h4>
+  <form action="{% url 'add-comment' %}" method="POST" class="mt-4">
+    {% csrf_token %}
+    <div class="form-group">{{ comment_form.text }}</div>
+    <div class="d-flex justify-content-end">
+      <input type="hidden" name="listing_id" value="{{ listing.id }}" />
+      <input type="submit" value="Submit" class="btn btn-primary btn-lg" />
     </div>
-    {% endfor %}
+  </form>
+  {% endif %} {% for comment in comments %}
+  <div class="alert my-3 border w-100" role="alert">
+    <header>
+      <p><b>{{ comment.user }}</b></p>
+    </header>
+    <p>{{ comment.text }}</p>
+    <hr />
+    <p class="muted small">{{ comment.created_at }}</p>
   </div>
+  {% endfor %}
 </div>
 {% endblock body %}
