Fix counting category listings

--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -19,7 +19,7 @@
           <h4>{{ category.title }}</h4>
         </header>
         <hr>
-        <p class="mt">{{ category.listings.count }} Listings</p>
+        <p class="mt">{{ category.listings_count }} Listings</p>
         <p class="muted small">{{ category.created_at }}</p>
       </a>
     </div>
